--- a/styles.css
+++ b/styles.css
@@ -347,11 +347,11 @@ header {
   height: 50vh;
   width: 100%;
   display: flex;
-  justify-content: center;
+/*   justify-content: center;
   align-items: center;
   color:#ededed;
   text-align: center;
-  text-shadow: 0 3px 12px rgba(0, 0, 0, 0.9);
+  text-shadow: 0 3px 12px rgba(0, 0, 0, 0.9); */
 
   background-image: url("davante-alumnos.png");
   background-size: cover;
@@ -375,6 +375,34 @@ header {
   object-fit: cover;    /* Ahora sí se adapta */
 }
 
+
+/*HERO Launcher*/
+.hero-launcher {
+  height: 50vh;
+  width: 100%;
+  display: flex;
+
+  background-image: url("LauncherDesignV1.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.img-estudiantes {
+  position: relative;
+  width: 100%;
+  height: 100vh;        /* Hero en pantalla completa */
+  overflow: hidden;
+}
+
+.img-estudiantes img {
+  position: absolute;   /* Esto es CLAVE */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;    /* Ahora sí se adapta */
+}
 
 
 /*FIN CSS TEXTO PLANO CRIS*/
