--- a/styles.css
+++ b/styles.css
@@ -347,11 +347,11 @@ header {
   height: 50vh;
   width: 100%;
   display: flex;
-/*   justify-content: center;
+  justify-content: center;
   align-items: center;
-  color:#ededed;
+  /* color:#ededed;
   text-align: center;
-  text-shadow: 0 3px 12px rgba(0, 0, 0, 0.9); */
+  text-shadow: 0 3px 12px rgba(0, 0, 0, 0.9); */ 
 
   background-image: url("davante-alumnos.png");
   background-size: cover;
@@ -381,6 +381,8 @@ header {
   height: 50vh;
   width: 100%;
   display: flex;
+  justify-content: center;
+  align-items: center;
 
   background-image: url("LauncherDesignV1.png");
   background-size: cover;
