--- a/styles.css
+++ b/styles.css
@@ -244,6 +244,68 @@ header {
   }
 }
 
+/*carousel responsive paty */
+.carousel {
+  position: relative;
+  width: 100%;
+  max-width: 320px;
+  margin: 40px auto;
+  overflow: hidden;
+
+}
+
+.carousel-track {
+  display: flex;
+  transition: transform 0.45s ease;
+}
+
+.carousel .slide {
+  width: 100%;
+  flex-shrink: 0;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+.carousel .slide img{
+  width: 70%;
+  max-width: 160px;
+  height: auto;
+}
+@media (min-width: 600px) {.slide {
+  min-width: 50%;}}
+
+  @media (min-width: 900px){.slide{
+    min-width: 33.33%;}}
+
+.carousel .btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(0, 0, 0, 0.55);
+  color: white;
+  border: none;
+  width: 38px;
+  height: 38px;
+  display: grid;
+  place-items: center;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.carousel .btn.prev {
+  left: 10px;
+}
+
+.carousel .btn.next {
+  right: 10px;
+}
+
+.carousel .btn:hover{
+  background: rgba(0,0,0,0.7)
+}
+
 /*FIN CSS TEXTO PLANO CRIS*/
 
 /* ===== RESPONSIVE ===== */
